--- a/practice4/stylehomework4.css
+++ b/practice4/stylehomework4.css
@@ -1,47 +1,316 @@
-body, html{
+body, html {
     height: 100%;
     margin: 0;
     padding: 0;
     font-family: Garamond, sans-serif;
 }
-#login_header{
+
+#login_header {
     background-color: rgb(235, 235, 235);
     color: black;
     width: 100%;
     text-align: right;
 }
+
 #login_header > a {
     text-decoration: none;
     font-size: 0.75em;
     padding: 5px;
 }
-#login_header > a:active{
+
+#login_header > a:active {
     color: black;
 }
-#login_header > a:link{
+
+#login_header > a:link {
     color: black;
 }
-#login_header > a:visited{
+
+#login_header > a:visited {
     color: black;
 }
-#login_header > a:hover{
+
+#login_header > a:hover {
     color: red;
     text-decoration: underline;
 }
-.box{
+
+.box {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 30px;
 }
-#searchbutton{
+
+.search-box {
     background-color: rgb(235, 235, 235);
+    align-items: center;
+    padding: 5px;
 }
-input, h2.order{
+
+.search-button {
     background-color: rgb(235, 235, 235);
     border: none;
 }
-h2.order:active{
-    border: 1px;
-    border-color: rgb(235, 235, 235) red red red;
 
+.search-button:focus {
+    outline: none;
+}
+
+.search-glass {
+    vertical-align: bottom;
+}
+
+#cart > a:hover {
+    color: red;
+}
+
+.fa-shopping-bag, .basket-amount {
+    color: black;
+}
+
+.money {
+    color: red;
+}
+
+#cart > a {
+    text-decoration: none;
+}
+
+#cart > a:active, a:visited, a:link {
+    color: black;
+    text-decoration: none;
+}
+
+.menu {
+    background-color: rgb(61, 61, 61);
+
+}
+
+.menu ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    position: relative;
+}
+
+.menu ul li {
+    margin: 0px -7px 0 0;
+    display: inline-block;
+}
+
+.menu a {
+    display: block;
+    color: white;
+    text-decoration: none;
+    font-size: 10px;
+    padding: 18px 8px;
+}
+
+.menu > ul > li > a:hover {
+    color: red;
+    text-decoration: none;
+    background-color: grey;
+    text-shadow: 1px 1px 2px black;
+}
+
+.menu ul ul {
+    display: none;
+    position: absolute;
+    top: 100%;
+    font-size: 10px;
+    padding: 10px 10px;
+    background-color: white;
+    opacity: inherit;
+
+}
+
+.menu ul ul li a {
+    color: black;
+    border: 1px rgb(235, 235, 235);
+}
+
+.menu ul ul li a:hover {
+    color: red;
+    background-color: white;
+    text-decoration: underline;
+    text-decoration-color: black;
+
+}
+
+.menu ul li:hover > ul {
+    display: inherit;
+}
+
+.menu ul ul li {
+    min-width: 170px;
+    float: none;
+    display: list-item;
+    position: relative;
+}
+
+.line {
+    display: none;
+}
+
+input {
+    background-color: rgb(235, 235, 235);
+    border: none;
+}
+
+.order_form {
+    display: flex;
+    flex: 100%;
+}
+
+.order_form input:focus {
+    border: 1px solid;
+    border-color: red;
+    outline: none !important;
+}
+
+main {
+    padding: 0 30px;
+    display: flex;
+}
+
+.order-delivery, .order-summary {
+    flex: 50%;
+    padding: 15px;
+}
+
+.order-summary {
+    background-color: rgb(235, 235, 235);
+    margin-top: 100px;
+}
+
+.person-wrapper {
+    height: 100px;
+}
+
+.coupon {
+    display: flex;
+    color: white;
+    background-color: rgb(238, 59, 59);
+    padding: 15px;
+    font-size: 10px;
+    width: 350px;
+}
+
+.coupon-link {
+    padding: 11px;
+    letter-spacing: 1px;
+}
+
+.coupon-link:active {
+    text-decoration: none;
+}
+
+.coupon-link:hover {
+    color: white;
+    text-decoration: underline;
+}
+
+.coupon-image {
+    margin: 0 5px;
+}
+
+.coupon-text {
+    padding: 11px;
+}
+
+.text-grey {
+    color: rgb(111, 116, 120);
+    font-size: 12px;
+    padding-bottom: 8px;
+}
+
+.login_main:hover {
+    color: red;
+    text-decoration: underline;
+}
+
+.flex-row {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+
+.order_form input {
+    padding: 5px;
+}
+
+#delivery_type {
+    width: 378px;
+}
+
+#address {
+    width: 369px;
+}
+
+.menu-button {
+    padding: 8px;
+    margin-top: 8px;
+    color: lightgrey;
+    background-color: white;
+    border: none;
+    display: none;
+}
+
+.menu-button:active {
+    color: lightgrey;
+}
+
+p {
+    padding: 0 48px;
+}
+
+footer {
+    color: (235, 235, 235);
+    background-color: rgb(61, 61, 61);
+    width: 100%;
+    display: inline-flex;
+    justify-content: space-around;
+}
+
+footer a:hover {
+    color: white;
+    text-decoration: underline;
+}
+
+/*margin: 30px 15px 0 0;*/
+/*margin: 5px 15px 0 0;*/
+@media screen and (max-width: 990px) {
+    .menu-button {
+        display: block;
+    }
+
+    .menu {
+        display: none;
+    }
+
+    .menu-button:active {
+        color: lightgrey;
+    }
+
+    .menu-button:link {
+        color: lightgrey;
+    }
+
+    #search {
+        display: none;
+    }
+
+    .line {
+        display: inline;
+        color: rgb(235, 235, 235);
+    }
+
+}
+
+@media screen and (max-width: 780px) {
+
+    .order_form {
+        display: block;
+    }
 }
